--- a/texto.tex
+++ b/texto.tex
@@ -17,7 +17,7 @@
 \usepackage[section]{placeins}
 %\usepackage{fancyhdr} % para cabeçalhos mais elaborados
 
-\fvset{fontsize=\footnotesize}
+\fvset{fontsize=\scriptsize}
 
 \renewcommand{\textfraction}{0.05}
 \renewcommand{\topfraction}{0.95}
@@ -69,7 +69,7 @@ Engenharia da Universidade do Porto}
 \chapter{Logic Programming and Tabling}
 \input{state}
 
-\chapter{Table Space and Subsumptive Tabling}
+\chapter{Table Space Organization}
 \input{chapter_3}
 
 \chapter{Time Stamped Tries}
@@ -78,6 +78,7 @@ Engenharia da Universidade do Porto}
 \chapter{Implementation Details}
 
 \chapter{Experimental Results}
+\input{results}
 
 \chapter{Conclusions and further work}
 
