add a new reference

--- a/references.bib
+++ b/references.bib
@@ -1294,6 +1294,19 @@
   publisher = {Springer-Verlag},
   OPTaddress =   {Tsukuba, Japan},
 }
+
+%% XXX - falta definir as pages...
+@InProceedings{Johnson-00,
+   author =   {Ernie Johnson},
+  title =     {{Interfacing a Tabled-WAM Engine to a Tabling Subsystem Supporting Both Variant and Subsumption Checks}},
+  booktitle = {Conference on Tabulation in Parsing and Deduction},
+  OPTmonth =     {September},
+  year =      {2000},
+  OPTaddress =   {Vigo, Spain},
+}
+
+
+
 % ----- K -----
 @Phdthesis{Karlsson-PhD,
   author = {R. Karlsson},
